--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "node-polyfill-webpack-plugin": "^2.0.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "qz-tray": "^2.2.1",
+    "sha.js": "^2.4.11",
     "simple-keyboard": "^3.4.120",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
@@ -23,6 +28,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^0.18.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -30,6 +36,7 @@
     "prettier": "^2.4.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
