--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "electron-vue-printer": "^1.3.3",
     "node-polyfill-webpack-plugin": "^2.0.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
@@ -16,6 +19,8 @@
     "sha.js": "^2.4.11",
     "simple-keyboard": "^3.4.120",
     "vue": "^2.6.14",
+    "vue-filter-date-format": "^1.3.1",
+    "vue-html-to-paper": "^1.3.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
@@ -28,7 +33,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "axios": "^0.18.0",
+    "axios": "^1.1.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
