--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VUE_APP_ENDPOINT="https://api.EXAMPLE.dev/api"
 VUE_APP_BASE_API="http://172.166.122.218/vue-service/index.php/api/"
 VUE_APP_BASE_API_APOM="http://172.166.122.217/e-pasien/api/"
+VUE_APP_URL_IMG="https://apirsds.tegalkab.go.id/"
+NODE_ENV="development"
