--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-filter-date-format": "^1.3.1",
     "vue-html-to-paper": "^1.3.1",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
