--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,5 @@
 VUE_APP_BASE_URL="https://apirsds.tegalkab.go.id/apom/"
 VUE_APP_BASE_API="https://apirsds.tegalkab.go.id/vue-service/index.php/api/"
-VUE_APP_BASE_API_APOM="https://apirsds.tegalkab.go.id/e-pasien/Api/"
+VUE_APP_BASE_API_APOM="https://apirsds.tegalkab.go.id/e-pasien/api/"
 VUE_APP_URL_IMG="https://apirsds.tegalkab.go.id/"
-VUE_APP_NODE_ENV="production"
-NODE_ENV="production"
+NODE_ENV="development"
