--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
-VUE_APP_ENDPOINT="https://api.EXAMPLE.dev/api"
-BASE_API="kosong"
+VUE_APP_BASE_URL="https://apirsds.tegalkab.go.id/apom/"
+VUE_APP_BASE_API="https://apirsds.tegalkab.go.id/vue-service/index.php/api/"
+VUE_APP_BASE_API_APOM="https://apirsds.tegalkab.go.id/e-pasien/Api/"
+VUE_APP_URL_IMG="https://apirsds.tegalkab.go.id/"
+NODE_ENV="production"
