--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode production",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,13 +11,10 @@
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "electron-vue-printer": "^1.3.3",
     "node-polyfill-webpack-plugin": "^2.0.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
-    "qz-tray": "^2.2.1",
     "register-service-worker": "^1.7.2",
-    "sha.js": "^2.4.11",
     "simple-keyboard": "^3.4.120",
     "vue": "^2.6.14",
     "vue-filter-date-format": "^1.3.1",
