--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-VUE_APP_BASE_URL="https://apirsds.tegalkab.go.id/apom/"
-VUE_APP_BASE_API="https://apirsds.tegalkab.go.id/vue-service/index.php/api/"
-VUE_APP_BASE_API_APOM="https://apirsds.tegalkab.go.id/e-pasien/api/"
+VUE_APP_BASE_URL="http://172.166.122.239/apom/"
+VUE_APP_BASE_API="http://172.166.122.218/vue-service/index.php/api/"
+VUE_APP_BASE_API_APOM="http://172.166.122.241/e-pasien/index.php/Api/"
 VUE_APP_URL_IMG="https://apirsds.tegalkab.go.id/"
 NODE_ENV="development"
