--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.14",
     "vue-filter-date-format": "^1.3.1",
     "vue-html-to-paper": "^1.3.1",
+    "vue-mobile-detection": "^1.0.0",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^5.0.5",
     "vuetify": "^2.6.0",
